--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "react-swipeable-views": "^0.13.3",
     "redux": "^4.0.4"
   },
   "scripts": {
